# healthcare-management

./: .gitignore  README.md  license.txt  pyproject.toml
healthcare_kepin/: hooks.py  modules.txt  patches.txt
healthcare_kepin/config/: desktop.py  docs.py
healthcare_kepin/healthcare_kepin/custom_doctype/clinical_procedure/: clinical_procedure.py
healthcare_kepin/healthcare_kepin/custom_doctype/nursing_task/: nursing_task.py
healthcare_kepin/healthcare_kepin/custom_doctype/patient_encounter/: patient_encounter.py
healthcare_kepin/healthcare_kepin/custom_doctype/sales_invoice/: sales_invoice.py
healthcare_kepin/patches/v0_0/: remove_fetch_from_duration_in_patient_appointment.py
healthcare_kepin/public/js/: clinical_procedure.js  patient_appointment.js
healthcare_management/: hooks.py  modules.txt  patches.txt
healthcare_management/config/: desktop.py  docs.py
healthcare_management/healthcare_management/custom_doctype/clinical_procedure/: clinical_procedure.py
healthcare_management/healthcare_management/custom_doctype/nursing_task/: nursing_task.py
healthcare_management/healthcare_management/custom_doctype/patient_encounter/: patient_encounter.py  patient_encounter_dashboard.py
healthcare_management/healthcare_management/custom_doctype/sales_invoice/: sales_invoice.py
healthcare_management/patches/v0_0/: add_clinical_procedure_in_procedure_prescription.py  add_fetch_from_patient_and_practitioner_in_clinical_procedure.py
healthcare_management/public/js/: clinical_procedure.js  patient_encounter.js
